--- a/package.json
+++ b/package.json
@@ -9,25 +9,33 @@
   ],
   "main": "src/index.tsx",
   "dependencies": {
+    "@craco/craco": "^6.0.0",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
+    "autoprefixer": "^9.8.6",
     "eth-simple-keyring": "4.0.0",
     "ipfs-http-client": "48.1.3",
+    "postcss": "^7.0.35",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-markdown": "5.0.3",
-    "react-scripts": "3.3.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.1",
+    "react-storage-hooks": "^4.0.1",
     "remark-gfm": "1.0.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "use-wallet": "0.8.1",
     "web3-react": "5.0.5"
   },
   "devDependencies": {
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
+    "@types/react-router-dom": "^5.1.7",
     "typescript": "4.0.x"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "browserslist": [
