--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "noFallthroughCasesInSwitch": true
   },
   "exclude": [
     "node_modules"
-  ],
+  ]
 }
